# fritzbox2mqtt

./: README.md  config.yaml.sample  fritzbox.py  fritzbox2mqtt.py  mqtt.py  pyproject.toml  requirements.txt
fritzbox2mqtt/: fritzbox2mqtt.py
