[tool.poetry]
name = "fritzbox2mqtt"
version = "0.0.1"
description = ""
authors = [
	"Tobias Müller <Tobias_Mueller@twam.info>"
]
license = "MIT"

[tool.poetry.scripts]
fritzbox2mqtt = 'fritzbox2mqtt.fritzbox2mqtt:main'

[tool.poetry.dependencies]
python="^3.10"
PyYAML="^6.0"
paho-mqtt="<2"
fritzconnection="*"
python-daemon="*"

[tool.poetry.dev-dependencies]
ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 140
